initial work backporting release 2.4